--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div class="container-fluid"> 
       <header>
         <div class="container">
+          <!--
           <div class="col-md-3"><a href="index.html" class="brand"><img alt="Your Alternative text" src="images/logo.svg"></a></div>
           <div class="col-md-6 text-center">
             <div class="nav-trigger">
@@ -44,11 +45,11 @@
               <li> <a href="#">Contact</a>
                 <ul class="dropdown">
                   <li><a href="pages/contact.html">Contact</a></li>
-                 // <li><a href="pages/contact-alternative.html">Contact - alternative</a></li>
+                  <li><a href="pages/contact-alternative.html">Contact - alternative</a></li>
                 </ul>
               </li>
             </ul>
-          </div>
+          </div>-->
           <div class="col-md-3">
             <form>
               <div class="search input-group">
@@ -63,7 +64,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-6 col-md-offset-3">
-              <h1>Work</h1>
+              <h1><span class="typed">Portfolio in progress...</span></h1>
               <p>Believing in smart ideas and branding experiences. <br>Good design is as less design as possible.</p>
             </div>
           </div>
