--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <section class="hero text-center">
         <div class="container">
           <div class="row">
-            <div class="col-md-6 col-md-offset-3">
+            <div class="col-md-6">
               <h1><span class="typed">Portfolio in progress...</span></h1>
               <p>Believing in smart ideas and branding experiences. <br>Good design is as less design as possible.</p>
             </div>
