--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </ul>
               </li>
             </ul>
-          </div>-->
+          </div>
           <div class="col-md-3">
             <form>
               <div class="search input-group">
@@ -57,7 +57,7 @@
                   <button type="button" class="btn btn-default"><span class="ion-ios-search-strong"></span></button></span>
               </div>
             </form>
-          </div>
+          </div>-->
         </div>
       </header>
       <section class="hero text-center">
@@ -70,7 +70,7 @@
           </div>
         </div>
       </section>
-      <section class="grid-container">
+      <!--<section class="grid-container">
         <div class="container">
           <div class="row">
             <div class="col-md-12"><a href="#" class="btn btn-default filter-trigger">Filter</a></div>
@@ -107,7 +107,7 @@
                 </div></a></div>
           </div>
         </div>
-      </section>
+      </section>-->
       <footer>
         <div class="container">
           <div class="row">
