--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
           </div>-->
         </div>
       </header>
-      <section class="hero text-center">
+      <section class="hero">
         <div class="container">
           <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6 col-md-offset-3">
               <h1><span class="typed">Portfolio in progress...</span></h1>
               <p>Believing in smart ideas and branding experiences. <br>Good design is as less design as possible.</p>
             </div>
@@ -108,7 +108,7 @@
           </div>
         </div>
       </section>-->
-      <footer>
+      <footer><!--
         <div class="container">
           <div class="row">
             <div class="col-md-3 text-center">
@@ -129,12 +129,12 @@
               </ul>
             </div>
           </div>
-        </div>
+        </div>-->
       </footer>
       <footer class="bottom">
         <div class="container">
           <div class="row">
-            <div class="col-md-12 text-center">&copy; The 8 Creative. All rights reserved. <a href="https://themeforest.net/item/eight-responsive-portfolio-html5-template/16816093">Buy Eight</a></div>
+            <div class="col-md-12 text-center">&copy; Keonju Jeon. All rights reserved. <a href="https://themeforest.net/item/eight-responsive-portfolio-html5-template/16816093">Buy Eight</a></div>
           </div>
         </div>
       </footer>
