--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/custom.css">
     <!-- inject:css-->
     <!-- endinject -->
-    <link rel="icon" type="image/png" href="favicon.png?version=1">
+    <link rel="icon" type="image/png" href="#">
     <script src="js/assets/jquery.js"></script>
   </head>
   <body class="smooth-transition">
@@ -65,7 +65,7 @@
           <div class="row">
             <div class="col-md-6 col-md-offset-3">
               <h1><span class="typed">Portfolio in progress...</span></h1>
-              <p>Believing in smart ideas and branding experiences. <br>Good design is as less design as possible.</p>
+              <!--<p>Believing in smart ideas and branding experiences. <br>Good design is as less design as possible.</p>-->
             </div>
           </div>
         </div>
@@ -112,7 +112,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-3 text-center">
-              <p>The 8 Creatives<br>Design Studio</p>
+              <p>The Creatives<br>Design Studio</p>
             </div>
             <div class="col-md-3 text-center">
               <p>8 Infinite Loop<br>Cupertino, CA 95014</p>
@@ -134,7 +134,7 @@
       <footer class="bottom">
         <div class="container">
           <div class="row">
-            <div class="col-md-12 text-center">&copy; Keonju Jeon. All rights reserved. <a href="https://themeforest.net/item/eight-responsive-portfolio-html5-template/16816093">Buy Eight</a></div>
+            <div class="col-md-12 text-center">&copy; Keonju Jeon. All rights reserved.</div>
           </div>
         </div>
       </footer>
