--- a/index.html
+++ b/index.html
@@ -131,6 +131,9 @@
           </div>
         </div>-->
       </footer>
+            <!-- The type animation script-->
+      <script>$(function(){$(".typed").typed({strings: ["Portfolio in Progress..."],typeSpeed: 130,loop: true  });});</script>
+   
       <footer class="bottom">
         <div class="container">
           <div class="row">
