--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-6 col-md-offset-3">
-              <h1><span class="typed">Portfolio in progress...</span></h1>
+              <h1><span class="typed">In progress...</span></h1>
               <!--<p>Believing in smart ideas and branding experiences. <br>Good design is as less design as possible.</p>-->
             </div>
           </div>
@@ -132,7 +132,7 @@
         </div>-->
       </footer>
             <!-- The type animation script-->
-      <script>$(function(){$(".typed").typed({strings: ["Portfolio in Progress..."],typeSpeed: 130,loop: true  });});</script>
+      <script>$(function(){$(".typed").typed({strings: ["In Progress..."],typeSpeed: 130,loop: true  });});</script>
    
       <footer class="bottom">
         <div class="container">
