--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/custom.css">
     <!-- inject:css-->
     <!-- endinject -->
-    <link rel="icon" type="image/png" href="#">
+    <link rel="icon" type="" href="#">
     <script src="js/assets/jquery.js"></script>
   </head>
   <body class="smooth-transition">
