--- a/index.html
+++ b/index.html
@@ -1,169 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Keonju Jeon - Portfolio</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="css/core.css">
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <link rel="stylesheet" type="text/css" href="css/custom.css">
-    <!-- inject:css-->
-    <!-- endinject -->
-    <link rel="icon" type="" href="#">
-    <script src="js/assets/jquery.js"></script>
-  </head>
-  <body class="smooth-transition">
-    <div class="container-fluid"> 
-      <header>
-        <div class="container">
-          <!--
-          <div class="col-md-3"><a href="index.html" class="brand"><img alt="Your Alternative text" src="images/logo.svg"></a></div>
-          <div class="col-md-6 text-center">
-            <div class="nav-trigger">
-              <div class="bar"></div>
-              <div class="bar"></div>
-              <div class="bar"></div>
-            </div>
-            <ul class="navigation">
-              <li><a href="#" class="active">Work</a>
-                <ul class="dropdown">
-                  <li><a href="index.html">Classic</a></li>
-                  <li><a href="pages/work-masonry.html">Masonry</a></li>
-                  <li><a href="pages/work-lightbox.html">Lightbox</a></li>
-                  <li><a href="pages/work-single.html">Single</a></li>
-                </ul>
-              </li>
-              <li> <a href="pages/about.html">About</a>
-              </li>
-              <li> <a href="#">Blog</a>
-                <ul class="dropdown">
-                  <li><a href="pages/blog.html">Blog - Classic</a></li>
-                  <li><a href="pages/blog-no-images.html">Blog - No images</a></li>
-                  <li><a href="pages/blog-single.html">Single</a></li>
-                </ul>
-              </li>
-              <li> <a href="#">Contact</a>
-                <ul class="dropdown">
-                  <li><a href="pages/contact.html">Contact</a></li>
-                  <li><a href="pages/contact-alternative.html">Contact - alternative</a></li>
-                </ul>
-              </li>
-            </ul>
-          </div>
-          <div class="col-md-3">
-            <form>
-              <div class="search input-group">
-                <input type="text" placeholder="Search for..." class="form-control"><span class="input-group-btn">
-                  <button type="button" class="btn btn-default"><span class="ion-ios-search-strong"></span></button></span>
-              </div>
-            </form>
-          </div>-->
-        </div>
-      </header>
-      <section class="hero">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-6 col-md-offset-3">
-              <h1><span class="typed">In progress...</span></h1>
-              <!--<p>Believing in smart ideas and branding experiences. <br>Good design is as less design as possible.</p>-->
-            </div>
-          </div>
-        </div>
-      </section>
-      <!--<section class="grid-container">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-12"><a href="#" class="btn btn-default filter-trigger">Filter</a></div>
-            <div class="col-md-12 grid classic"><a href="pages/work-single.html" class="item books">
-                <div class="thumb"><img alt="Your Alternative text" src="images/portfolio/01.png"></div>
-                <div class="caption">
-                  <h4>Landingpage</h4>
-                  <div class="tag">UI Design &amp; Frontend Development</div>
-                </div></a><a href="pages/work-single.html" class="item typography">
-                <div class="thumb"><img alt="Your Alternative text" src="images/portfolio/02.png"></div>
-                <div class="caption">
-                  <h4>Old Typography Practices</h4>
-                  <div class="tag">UI Design &amp; Typography</div>
-                </div></a><a href="pages/work-single.html" class="item design">
-                <div class="thumb"><img alt="Your Alternative text" src="images/portfolio/03.png"></div>
-                <div class="caption">
-                  <h4>Hybrid Identity</h4>
-                  <div class="tag">Visual Identity &amp; Fashion</div>
-                </div></a><a href="pages/work-single.html" class="item books design">
-                <div class="thumb"><img alt="Your Alternative text" src="images/portfolio/04.png"></div>
-                <div class="caption">
-                  <h4>Axes</h4>
-                  <div class="tag">Logo &amp; Identity</div>
-                </div></a><a href="pages/work-single.html" class="item fashion design">
-                <div class="thumb"><img alt="Your Alternative text" src="images/portfolio/05.png"></div>
-                <div class="caption">
-                  <h4>The pursuit of happiness</h4>
-                  <div class="tag">Visual Identity &amp; Print</div>
-                </div></a><a href="pages/work-single.html" class="item typography">
-                <div class="thumb"><img alt="Your Alternative text" src="images/portfolio/06.png"></div>
-                <div class="caption">
-                  <h4>The yellow book</h4>
-                  <div class="tag">Print &amp; Design</div>
-                </div></a></div>
-          </div>
-        </div>
-      </section>-->
-      <footer><!--
-        <div class="container">
-          <div class="row">
-            <div class="col-md-3 text-center">
-              <p>The Creatives<br>Design Studio</p>
-            </div>
-            <div class="col-md-3 text-center">
-              <p>8 Infinite Loop<br>Cupertino, CA 95014</p>
-            </div>
-            <div class="col-md-3 text-center">
-              <p>hello@example.com<br>01 (2) 34 56 78</p>
-            </div>
-            <div class="col-md-3 text-center">
-              <ul class="social-links">
-                <li> <a href="#" class="fa fa-vimeo"></a></li>
-                <li> <a href="#" class="fa fa-instagram"></a></li>
-                <li> <a href="#" class="fa fa-twitter"></a></li>
-                <li> <a href="#" class="fa fa-behance"></a></li>
-              </ul>
-            </div>
-          </div>
-        </div>-->
-      </footer>
-            <!-- The type animation script-->
-      <script>$(function(){$(".typed").typed({strings: ["In Progress..."],typeSpeed: 130,loop: true  });});</script>
-   
-      <footer class="bottom">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-12 text-center">&copy; Keonju Jeon. All rights reserved.</div>
-          </div>
-        </div>
-      </footer>
-      <div class="filter-container">
-        <div class="container">
-          <div class="inner">
-            <ul class="filters">
-              <li> <a href="#" data-filter="item" class="active filter">All</a></li>
-              <li><a href="#" data-filter="design" class="filter">Design</a></li>
-              <li><a href="#" data-filter="typography" class="filter">Typography</a></li>
-              <li><a href="#" data-filter="fashion" class="filter">Fashion</a></li>
-              <li><a href="#" data-filter="books" class="filter">Books</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-    <script src="js/assets/bootstrap.js"></script>
-    <script src="js/assets/imagesloaded.pkgd.min.js"></script>
-    <script src="js/assets/validation.js"></script>
-    <script src="js/assets/packery.pkgd.min.js"></script>
-    <script src="js/assets/velocity.min.js"></script>
-    <script src="js/assets/typed.min.js"></script>
-    <script src="modules/titan-slider/titan-slider.js"></script>
-    <script src="modules/tera-lightbox/tera-lightbox.js"></script>
-    <script src="js/assets/animsition.js"></script>
-    <script src="js/functions.js"></script>
-  </body>
+
+<head>
+	<meta charset="utf-8" />
+	<!-- keep the line below for OpenProcessing compatibility -->
+	<script src="https://openprocessing.org/openprocessing_sketch.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/addons/p5.sound.min.js"></script>
+	<script src="utils.js"></script>
+	<script src="myAlphabets.js"></script>
+	<script src="alphabets-sample.js"></script>
+	<!-- 	<script src="week1.js"></script> -->
+	<!-- 	<script src="week1-1.js"></script> -->
+	<!-- 	<script src="week2-mouse.js"></script> -->
+	<!-- 	<script src="week2-for.js"></script> -->
+<!-- 		<script src="slider.js"></script> -->
+	<script src="final.js"></script>
+<!-- 	<script src="image.js"></script> -->
+<!-- 		<script src="webcam.js"></script> -->
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+
+<body>   
+	
+</body>
+
 </html>
