--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 	<!-- 	<script src="week2-mouse.js"></script> -->
 	<!-- 	<script src="week2-for.js"></script> -->
 <!-- 		<script src="slider.js"></script> -->
-<!-- 	<script src="final.js"></script> -->
+	<script src="final.js"></script>
 <!-- 	<script src="image.js"></script> -->
-		<script src="webcam.js"></script>
+<!-- 		<script src="webcam.js"></script> -->
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
